--- a/src/pug/sections/_benefits.pug
+++ b/src/pug/sections/_benefits.pug
@@ -1,23 +1,24 @@
-.benefits
-	.benefits-block
-		//===single card ====
-		a(href="#").benefit-card
-			svg.svg-folder
-				use(href="./img/spriteSvg.svg#svg-folder")
-			.txt-medi Инвестиционные проекты
+article.benefits
+	.container
+		.benefits-block
+			//===single card ====
+			a(href="#").benefit-card
+				svg.svg-folder
+					use(href="./img/spriteSvg.svg#svg-folder")
+				.txt-medi Инвестиционные проекты
 
-		//===single card ====
-		a(href="#").benefit-card
-			svg.svg-folder
-				use(href="./img/spriteSvg.svg#svg-folder")
-			.txt-medi Инвестиционные площадки
-		//===single card ====
-		a(href="#").benefit-card
-			svg.svg-folder
-				use(href="./img/spriteSvg.svg#svg-folder")
-			.txt-medi Инновационные проекты
-		//===single card ====
-		a(href="#").benefit-card
-			svg.svg-folder
-				use(href="./img/spriteSvg.svg#svg-folder")
-			.txt-medi Инвестиционные предложения
+			//===single card ====
+			a(href="#").benefit-card
+				svg.svg-folder
+					use(href="./img/spriteSvg.svg#svg-folder")
+				.txt-medi Инвестиционные площадки
+			//===single card ====
+			a(href="#").benefit-card
+				svg.svg-folder
+					use(href="./img/spriteSvg.svg#svg-folder")
+				.txt-medi Инновационные проекты
+			//===single card ====
+			a(href="#").benefit-card
+				svg.svg-folder
+					use(href="./img/spriteSvg.svg#svg-folder")
+				.txt-medi Инвестиционные предложения
