--- a/src/pug/sections/_faq.pug
+++ b/src/pug/sections/_faq.pug
@@ -1,36 +1,37 @@
-.faq
-	.h3.mb-40 Структура и управление Корпорацией
-	.faq-content
-		.acor-container
-			//=========== single block =============
-			.acor-item
-				input#acor1(type='checkbox' name='acor' )
-				label(for='acor1').body-3 АО «Корпорация инвестиционного развития Республики Северная Осетия-Алания
-				.acor-body
-					h4 Деятельность АО «КИР РСО-А» направлена на:
-					p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
+article.faq
+	.container
+		.h3.mb-40 Структура и управление Корпорацией
+		.faq-content
+			.acor-container
+				//=========== single block =============
+				.acor-item
+					input#acor1(type='checkbox' name='acor' )
+					label(for='acor1').body-3 АО «Корпорация инвестиционного развития Республики Северная Осетия-Алания
+					.acor-body
+						h4 Деятельность АО «КИР РСО-А» направлена на:
+						p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
 
-			//=========== single block =============
-			.acor-item
-				input#acor2(type='checkbox' name='acor')
-				label(for='acor2').body-3 Направление деятельности АО «КИР РСО-А»
-				.acor-body
-					h4 Деятельность АО «КИР РСО-А» направлена на:
-					p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
-			
-			//=========== single block =============
-			.acor-item
-				input#acor4(type='checkbox' name='acor')
-				label(for='acor4').body-3 Корпорация как механизм реализации ГЧП
-				.acor-body
-					h4 Деятельность АО «КИР РСО-А» направлена на:
-					p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
+				//=========== single block =============
+				.acor-item
+					input#acor2(type='checkbox' name='acor')
+					label(for='acor2').body-3 Направление деятельности АО «КИР РСО-А»
+					.acor-body
+						h4 Деятельность АО «КИР РСО-А» направлена на:
+						p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
+				
+				//=========== single block =============
+				.acor-item
+					input#acor4(type='checkbox' name='acor')
+					label(for='acor4').body-3 Корпорация как механизм реализации ГЧП
+					.acor-body
+						h4 Деятельность АО «КИР РСО-А» направлена на:
+						p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
 
-			//=========== single block =============
-			.acor-item
-				input#acor3(type='checkbox' name='acor')
-				label(for='acor3').body-3 Структура и управление Корпорацией
-				.acor-body
-					h4 Деятельность АО «КИР РСО-А» направлена на:
-					p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
-			
+				//=========== single block =============
+				.acor-item
+					input#acor3(type='checkbox' name='acor')
+					label(for='acor3').body-3 Структура и управление Корпорацией
+					.acor-body
+						h4 Деятельность АО «КИР РСО-А» направлена на:
+						p Очень часто цифры после фразы «годен до» на упаковке с лекарством воспринимают как дату порчи лекарства. На самом деле речь идёт лишь о том, что до истечения указанного срока компания-производитель гарантирует эффективность препарата. Ряд лекарств, например, йод, не теряет своих свойств после истечения срока годности. Другой вопрос, что ответственность за их работу и возможные нежелательные эффекты после «даты икс» ложится уже на плечи самого пациента. Компании-производителю в случае чего претензии предъявить уже не получится.
+				
