--- a/src/pug/sections/_team.pug
+++ b/src/pug/sections/_team.pug
@@ -1,42 +1,43 @@
-.team
-	.team-slider-wrapper
-		.team-slider-col.fl-column
-			.h3.mb-40 Инвестиционная команда
-			.team-slider-nav.fly-center
-				.btn-left.team-slider-prev
-					svg.chevron-left
-						use(href="./img/spriteSvg.svg#chevron-left")
-				.btn-right.team-slider-next
-					svg.chevron-right
-						use(href="./img/spriteSvg.svg#chevron-right")
-		#team-counter
-		.team-slider.owl-carousel
-			
-			.team-slide
-				.team-slide__text.fl-column
-					.txt-semi Цаллагов Александр Сосланович
-					p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
-
-					.body-6 Команда региона
+article.team
+	.container
+		.team-slider-wrapper
+			.team-slider-col.fl-column
+				.h3.mb-40 Инвестиционная команда
+				.team-slider-nav.fly-center
+					.btn-left.team-slider-prev
+						svg.chevron-left
+							use(href="./img/spriteSvg.svg#chevron-left")
+					.btn-right.team-slider-next
+						svg.chevron-right
+							use(href="./img/spriteSvg.svg#chevron-right")
+			#team-counter
+			.team-slider.owl-carousel
 				
-				.team-slide__foto
-					img(src="./img/team.webp", width="339" height="448" alt="foto")
+				.team-slide
+					.team-slide__text.fl-column
+						.txt-semi Цаллагов Александр Сосланович
+						p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
 
-			.team-slide
-				.team-slide__text.fl-column
-					.txt-semi Цаллагов Александр Сосланович
-					p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
+						.body-6 Команда региона
+					
+					.team-slide__foto
+						img(src="./img/team.webp", width="339" height="448" alt="foto")
 
-					.body-6 Команда региона
-				
-				.team-slide__foto
-					img(src="./img/team.webp", width="339" height="448" alt="foto")
-			.team-slide
-				.team-slide__text.fl-column
-					.txt-semi Цаллагов Александр Сосланович
-					p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
+				.team-slide
+					.team-slide__text.fl-column
+						.txt-semi Цаллагов Александр Сосланович
+						p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
 
-					.body-6 Команда региона
-				
-				.team-slide__foto
-					img(src="./img/team.webp", width="339" height="448" alt="foto")
+						.body-6 Команда региона
+					
+					.team-slide__foto
+						img(src="./img/team.webp", width="339" height="448" alt="foto")
+				.team-slide
+					.team-slide__text.fl-column
+						.txt-semi Цаллагов Александр Сосланович
+						p Помощник Главы Республики Северная Осетия-Алания - главный архитектор Республики Северная Осетия-Алания
+
+						.body-6 Команда региона
+					
+					.team-slide__foto
+						img(src="./img/team.webp", width="339" height="448" alt="foto")
