--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -1,55 +1,56 @@
 section.content-page.body-3
-	.container-slim
-		h2 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
-		h3 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
-		
-		p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
-		
-		.product-fotorama
-			.fotorama(data-nav='thumbs')
-				a(href='./img/fotorama/product1-big.webp' )
-					img(src='./img/fotorama/product1-thumb.webp' width="157" height="94")
-				
-				a(href='./img/fotorama/product2-big.webp' )
-					img(src='./img/fotorama/product2-thumb.webp' width="157" height="94")
-
-				a(href='./img/fotorama/product3-big.webp' )
-					img(src='./img/fotorama/product3-thumb.webp' width="157" height="94")
-				
-				a(href='./img/fotorama/product4-big.webp' )
-					img(src='./img/fotorama/product4-thumb.webp' width="157" height="94")
-
-				a(href='./img/fotorama/product5-big.webp' )
-					img(src='./img/fotorama/product5-thumb.webp' width="157" height="94")
-				
-				a(href='./img/fotorama/product6-big.webp' )
-					img(src='./img/fotorama/product6-thumb.webp' width="157" height="94")
-
-				a(href='./img/fotorama/product7-big.webp' )
-					img(src='./img/fotorama/product7-thumb.webp' width="157" height="94")
-
-		p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
-
-		.txt-accent.body-3
-			p На базе хлебозавода планируется увеличить выпуск хлебобулочных изделий до 648т. в год. Организовать производство сыра, объем производства 125т. в год, натурального живого кваса 900т. в год и создать логистическое направление с различными температурными режимами от – 18С до +20.
-
-		.txt-warning
-			.txt-bold В ассортименте все виды классических осетинских пирогов:
-			.txt-semi пирог с сыром - «уæлибæх», пирог осетинский с картофелем и сыром – «картофджын», пирог осетинский с говядиной «фыдджын»,пирог осетинский с листьями свеклы и сыром–«цæхæраджын», пирог осетинский с капустой «къабускаджын»
-		
-		p Производство готовой замороженной выпечки - это актуальное и перспективное направление деятельности. Сегмент готовых блюд очень интенсивно развивается. В ближайших планах компании запуск франшизы – точек быстрого питания «Кухня народов России» от 2 кв.м. в торговых центрах, фудкортов, создание дополнительных рабочих мест во всех регионах – партнеры ИП, расширение ассортимента продукции: мороженое, пицца, блины. Создание службы доставки горячей продукции в регионах. Открытие мини–пекарен в сетевых магазинах.
-		p Логистическое направление реализуется совместно со Сбербанк лизинг. Планируется закупить до 20 автомобилей грузоподъемностью от 1 до 10т.
-		.video
-			.video-poster
-				img(src="./img/video.webp", alt="img")
+	.company-presentation
+		.container
+			h2 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
+			h3 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
 			
-			iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
+			p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
+			
+			.product-fotorama
+				.fotorama(data-nav='thumbs')
+					a(href='./img/fotorama/product1-big.webp' )
+						img(src='./img/fotorama/product1-thumb.webp' width="157" height="94")
+					
+					a(href='./img/fotorama/product2-big.webp' )
+						img(src='./img/fotorama/product2-thumb.webp' width="157" height="94")
 
-		//====== вопросы ответы ========
-		include ../sections/_faq.pug
+					a(href='./img/fotorama/product3-big.webp' )
+						img(src='./img/fotorama/product3-thumb.webp' width="157" height="94")
+					
+					a(href='./img/fotorama/product4-big.webp' )
+						img(src='./img/fotorama/product4-thumb.webp' width="157" height="94")
+
+					a(href='./img/fotorama/product5-big.webp' )
+						img(src='./img/fotorama/product5-thumb.webp' width="157" height="94")
+					
+					a(href='./img/fotorama/product6-big.webp' )
+						img(src='./img/fotorama/product6-thumb.webp' width="157" height="94")
+
+					a(href='./img/fotorama/product7-big.webp' )
+						img(src='./img/fotorama/product7-thumb.webp' width="157" height="94")
+
+			p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
+
+			.txt-accent.body-3
+				p На базе хлебозавода планируется увеличить выпуск хлебобулочных изделий до 648т. в год. Организовать производство сыра, объем производства 125т. в год, натурального живого кваса 900т. в год и создать логистическое направление с различными температурными режимами от – 18С до +20.
+
+			.txt-warning
+				.txt-bold В ассортименте все виды классических осетинских пирогов:
+				.txt-semi пирог с сыром - «уæлибæх», пирог осетинский с картофелем и сыром – «картофджын», пирог осетинский с говядиной «фыдджын»,пирог осетинский с листьями свеклы и сыром–«цæхæраджын», пирог осетинский с капустой «къабускаджын»
+			
+			p Производство готовой замороженной выпечки - это актуальное и перспективное направление деятельности. Сегмент готовых блюд очень интенсивно развивается. В ближайших планах компании запуск франшизы – точек быстрого питания «Кухня народов России» от 2 кв.м. в торговых центрах, фудкортов, создание дополнительных рабочих мест во всех регионах – партнеры ИП, расширение ассортимента продукции: мороженое, пицца, блины. Создание службы доставки горячей продукции в регионах. Открытие мини–пекарен в сетевых магазинах.
+			p Логистическое направление реализуется совместно со Сбербанк лизинг. Планируется закупить до 20 автомобилей грузоподъемностью от 1 до 10т.
+			.video
+				.video-poster
+					img(src="./img/video.webp", alt="img")
+				
+				iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
+
+	//====== вопросы ответы ========
+	include ../sections/_faq.pug
 		
-		//====== преимущества ========
-		include ../sections/_benefits.pug
+	//====== преимущества ========
+	include ../sections/_benefits.pug
 
-		//====== команда ========
-		include ../sections/_team.pug
+	//====== команда ========
+	include ../sections/_team.pug
