--- a/src/pug/sections/_benefits.pug
+++ b/src/pug/sections/_benefits.pug
@@ -1,5 +1,6 @@
 article.benefits
 	.container
+		.h3 Что предлагает АО «Корпорация инвестиционного развития Республики Северная Осетия-Алания
 		.benefits-block
 			//===single card ====
 			a(href="#").benefit-card
