--- a/src/pug/sections/_faq.pug
+++ b/src/pug/sections/_faq.pug
@@ -1,6 +1,6 @@
 article.faq
 	.container
-		.h3.mb-40 Структура и управление Корпорацией
+		.h3 Структура и управление Корпорацией
 		.faq-content
 			.acor-container
 				//=========== single block =============
