--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -44,7 +44,7 @@ section.content-page.body-3
 				.video-poster
 					img(src="./img/video.webp", alt="img")
 				
-				iframe( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
+				iframe#video-head( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
 
 	//====== вопросы ответы ========
 	include ../sections/_faq.pug
@@ -54,3 +54,21 @@ section.content-page.body-3
 
 	//====== команда ========
 	include ../sections/_team.pug
+
+	//====== институт уполномоченных ====
+	article.invest-commissioners
+		.container
+			.h3 Институт инвестиционных уполномоченных
+			p Для более оперативной и эффективной работы по реализации инвестиционных проектов на региональном и местном уровнях учрежден институт инвестиционных уполномоченных, представляющий органы исполнительной власти, органы местного самоуправления, территориальные органы федеральных органов власти и естественные монополии.
+			
+			h4 Основные цели:
+			ul
+				li Формирование благоприятных условий для привлечения инвестиционного капитала и реализации инвестиционных проектов на территории области
+				li Формирование открытого информационного пространства при осуществлении инвестиционной деятельности на территории области
+			
+			h4 Задачи инвестиционных уполномоченных:
+			ul
+				li Оказание содействия в реализации инвестиционных проектов на территории Нижегородской области
+				li Оказание правовой, методической и практической помощи субъектам инвестиционной деятельности
+				li Анализ федерального и областного законодательства и правоприменительной практики на предмет наличия в них положений, создающих препятствия для реализации инвестиционных проектов, и подготовка предложений по их совершенствованию
+			p Работа института инвестиционных уполномоченных позволяет сократить сроки согласований и разрешений за счет ежедневного контроля и вовлеченности в проект и, как следствие, существенно снизить временные издержки при реализации проекта.
