--- a/src/pug/sections/_team.pug
+++ b/src/pug/sections/_team.pug
@@ -2,7 +2,7 @@ article.team
 	.container
 		.team-slider-wrapper
 			.team-slider-col.fl-column
-				.h3.mb-40 Инвестиционная команда
+				.h3 Инвестиционная команда
 				.team-slider-nav.fly-center
 					.btn-left.team-slider-prev
 						svg.chevron-left
