--- a/src/scss/pages/_content-page.scss
+++ b/src/scss/pages/_content-page.scss
@@ -1,6 +1,6 @@
 .content-page{
 	color: $sec;
-	
+	// p{font-size: 18px;}
 	.company-presentation .container{
 		&>*+*{margin-top: 40px;}
 
@@ -8,6 +8,38 @@
 			&>*+* {margin-top: 20px;}
 		}
 	}
+	ul>li{
+		position: relative;
+		padding-left: 18px;
+		&:before{
+			content: '';
+			display: block;
+			width: 8px;
+			height: 8px;
+			border-radius: 50%;
+			background-color: $ac1;
+			position: absolute;
+			left: 0;
+			top: 6px;
+		}
+		&+li{margin-top: 20px;
+		@media (max-width: 767px) {
+		margin-top: 10px;
+		}}
+	}
+	article .container> *+*{
+		margin-top: 40px;
+		@media (max-width: 991px) {
+		margin-top: 20px;
+		}
+	}
+	article .container> *+ul {
+	margin-top: 20px;
+
+	@media (max-width: 991px) {
+		margin-top: 10px;
+	}
+}
 
 }
 .video {
