--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -4,7 +4,7 @@ section.content-page.body-3
 			h2 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
 			h3 Группа компаний «Алания Продукт» - производственно-логистический комплекс:
 			
-			p В настоящее время на фоне импортозамещения увеличился спрос на российские продукты питания. Весной 2014 года Владимир Владимирович Путин сказал, что осетинские пироги наряду с другими блюдами национальной кухни могут успешно заменить продукцию Макдональдс. Но для этого нужно наладить их промышленное производство, домашнее по сути, но изготовленное в промышленных масштабах. Производство наладили на базе предприятий партнеров. Подписаны договоры о поставке заморозки с сетями Магнит, Айгуль и Метро. Открывается логистический центр со складом временного хранения в г.Москва. Поставки начали по СКФО, ЮФО, г.Москва, Якутск и Крым.
+			p Группа компаний «Алания Продукт» начала проект по созданию производственно-логистического комплекса. Осуществить проект планируется инвесторами – учредителями, Корпорацией инвестиционного развития РСО-Алания, АМС Алагирского района РСО-Алания, которая предоставляет под инвест площадку действующий хлебозавод.
 			
 			.product-fotorama
 				.fotorama(data-nav='thumbs')
@@ -44,7 +44,7 @@ section.content-page.body-3
 				.video-poster
 					img(src="./img/video.webp", alt="img")
 				
-				iframe#video-head( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
+				//- iframe#video-head( src='https://www.youtube.com/embed/_lTkZNK_yyM?si=RR04Ww-HhZVXwkTO'  frameborder='0' allow='accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share' allowfullscreen='')
 
 	//====== вопросы ответы ========
 	include ../sections/_faq.pug
