--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -72,3 +72,18 @@ section.content-page.body-3
 				li Оказание правовой, методической и практической помощи субъектам инвестиционной деятельности
 				li Анализ федерального и областного законодательства и правоприменительной практики на предмет наличия в них положений, создающих препятствия для реализации инвестиционных проектов, и подготовка предложений по их совершенствованию
 			p Работа института инвестиционных уполномоченных позволяет сократить сроки согласований и разрешений за счет ежедневного контроля и вовлеченности в проект и, как следствие, существенно снизить временные издержки при реализации проекта.
+			.download-card-group
+				//=====card======
+				a(href="#!").download-card.fly-center
+					img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
+					p Распоряжение Правительства Нижегородской области от 29.03.2019 № 264-р «Об инвестиционных уполномоченных в Нижегородской области»
+					span .pdf
+					svg.svg-downl
+						use(href="./img/spriteSvg.svg#svg-downl")
+				//=====card======
+				a(href="#!").download-card.fly-center
+					img(src="./img/icons/doc.webp", width="62" height="62" alt="img")
+					p Список инвестиционных уполномоченных Нижегородской области
+					span .doc
+					svg.svg-downl
+						use(href="./img/spriteSvg.svg#svg-downl")
