--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,9 +9,7 @@
 @import "blocks/_components.scss";
 @import "blocks/_project-card.scss";
 @import "blocks/_news-card.scss";
-
-
-//@import "blocks/";
+@import "blocks/_downl-card.scss";
 //@import "blocks/";
 //@import "blocks/";
 //@import "blocks/";
