--- a/src/pug/layouts/layout.pug
+++ b/src/pug/layouts/layout.pug
@@ -74,4 +74,10 @@ html(lang="ru")
 		//=============== мои скрипты ===================
 		
 		script(src="./js/form.js")
+		
+		//===== скрипт iframe_api требуется для определения состояния видео. От этого постер над видео либо отображается, либо скрывается ========
+		script(src="https://www.youtube.com/iframe_api")
+		script(src="./js/player.js")
+		
+		//======== кастомные скрипты =======
 		script(src="./js/main.js")
