--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "sections/_faq.scss";
 @import "sections/_benefits.scss";
 @import "sections/_team.scss";
+@import "sections/_support.scss";
 
 
 @import "pages/_news.scss/";
