--- a/src/scss/blocks/_downl-card.scss
+++ b/src/scss/blocks/_downl-card.scss
@@ -1,3 +1,10 @@
+.download-card-group{
+	display: grid;
+	gap:10px;
+	grid-template-columns: 1fr;
+	
+	
+}
 .download-card{
 	border-radius: 20px;
 	border: 1px solid $sec2;
@@ -13,5 +20,15 @@
 		font-family: $semi;
 	}
 	span{font-size: 14px;}
-
+	@media (max-width: 991px) {
+		padding: 12px 10px;
+		border-radius: 10px;
+		img{width: 31px; height: 31px;}
+		svg{width: 20px; height: 20px;}
+		span{display: none;}
+		p{font-size: 12px;}
+	}
+		@media (max-width: 767px) {
+			align-items: flex-start;
+		}
 }
