--- a/src/scss/pages/_content-page.scss
+++ b/src/scss/pages/_content-page.scss
@@ -48,7 +48,7 @@
 	padding-top: 25px;
 	height: 0;
 	border-radius: 20px;
-	overflow: hidden;
+	overflow: hidden;cursor:pointer;
 }
 .video-poster{
 	position: absolute;
@@ -57,13 +57,14 @@
 	top: 0;
 	bottom: 0;
 	z-index: 2;
-	cursor:pointer;
+	
 	pointer-events: none;
 	border-radius: 20px;
 	img{
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+		cursor:pointer;
 	}
 }
 .video iframe {
@@ -73,5 +74,6 @@
 	width: 100%;
 	height: auto;
 	aspect-ratio: 16/9;
+	border-radius: 20px;
 
 }
