--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -63,3 +63,5 @@ section.content-page.body-3
 	//====== меры поддержки ====
 	include ../sections/_support.pug
 	
+	//====== экономика районов ====
+	include ../sections/_economics.pug
