--- a/src/pug/sections/_support.pug
+++ b/src/pug/sections/_support.pug
@@ -1,7 +1,7 @@
 article.support
 	.container
 		.h3 Меры поддержки
-		.support-card-block
+		.double-block
 			//====single card =====
 			.support-card.fly-center
 				img(src="./img/logo.webp", width="75" height="75" alt="img")
