--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -65,3 +65,6 @@ section.content-page.body-3
 	
 	//====== экономика районов ====
 	include ../sections/_economics.pug
+
+	//====== перемещение капитала ====
+	include ../sections/_capital.pug
