--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,7 +26,7 @@
 @import "sections/_benefits.scss";
 @import "sections/_team.scss";
 @import "sections/_support.scss";
-
+@import "sections/_capital.scss";
 
 @import "pages/_news.scss/";
 @import "pages/_content-page.scss/";
