--- a/src/pug/sections/_fotorama.pug
+++ b/src/pug/sections/_fotorama.pug
@@ -68,3 +68,6 @@ section.content-page.body-3
 
 	//====== перемещение капитала ====
 	include ../sections/_capital.pug
+
+	//====== контрольно-надзорная деятельность ====
+	include ../sections/_supervisory.pug
