--- a/src/pug/sections/_invest-commissioners.pug
+++ b/src/pug/sections/_invest-commissioners.pug
@@ -14,7 +14,7 @@ article.invest-commissioners
 			li Оказание правовой, методической и практической помощи субъектам инвестиционной деятельности
 			li Анализ федерального и областного законодательства и правоприменительной практики на предмет наличия в них положений, создающих препятствия для реализации инвестиционных проектов, и подготовка предложений по их совершенствованию
 		p Работа института инвестиционных уполномоченных позволяет сократить сроки согласований и разрешений за счет ежедневного контроля и вовлеченности в проект и, как следствие, существенно снизить временные издержки при реализации проекта.
-		.download-card-group
+		.single-column
 			//=====card======
 			a(href="#!").download-card.fly-center
 				img(src="./img/icons/pdf.webp", width="62" height="62" alt="img")
