--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -27,6 +27,8 @@
 @import "sections/_team.scss";
 @import "sections/_support.scss";
 @import "sections/_capital.scss";
+@import "sections/_supervisory.scss";
+
 
 @import "pages/_news.scss/";
 @import "pages/_content-page.scss/";
