--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,4 +1,4 @@
-.h1, .h2, .h3, h1, h2, h3, h4, h5, h6{
+.h1, .h2, .h3,.title-24,  h1, h2, h3, h4, h5, h6{
 	font-family: $bold;
 	font-weight: 700;
 	color: $pr;
@@ -47,6 +47,14 @@
 	@media (max-width: 767px) {
 	  font-size: 16px;
 	  
+	}
+}
+.title-24{
+	font-size: 24px;
+	line-height: 1.3;
+	@media (max-width: 767px) {
+	 font-size: 16px;
+	 line-height: 1.4;
 	}
 }
 .h4, h4{
