--- a/src/pug/sections/_capital.pug
+++ b/src/pug/sections/_capital.pug
@@ -7,6 +7,7 @@ article.capital-transfer
 		ul
 			li устанавливает правила осуществления денежных расчетов и банковских операций,• организует и осуществляет валютное регулирование и валютный контроль в соответствии с законодательством Российской Федерации,• осуществляет надзор за деятельностью кредитных организаций и банковских групп.
 		
+		h4 Расчеты между юридическими лицами (организациями)
 		.capital-table
 			.capital-table__head
 				p Вид расчетов
