--- a/src/pug/sections/_supervisory.pug
+++ b/src/pug/sections/_supervisory.pug
@@ -8,14 +8,16 @@ article.supervisory
 			li Совершенствование системы муниципального контроля
 			li Тесное сотрудничество с бизнес-омбудсменом и объединениями предпринимателей – ТПП, НАПП, Деловая Россия, Опора России
 			li Формы совместной работы – рабочая группа по вопросам реализации на территории Нижегородской области Федерального закона от 31.07.2020 № 248-ФЗ «О государственном контроле (надзоре) и муниципальном контроле в Российской Федерации», экспертная оценка выполнения целевой модели по КНД, встречи, публичные обсуждения и обмен мнениями
+
+//======= Кулибин =======
 article.special-project
 	.container
 		.h3 Особая экономическая зона промышленно-производственного типа «Кулибин»
 		
 		.special-project__block.fl-block 
 			img(src="./img/image-bg.webp", width="545" height="348"  alt="img")
+			
 			.single-column
-				
 				//===info card ====
 				.info-card.fl-block.body-3
 					svg.svg-folder
@@ -33,28 +35,95 @@ article.special-project
 						.txt-semi г.о.г.Дзержинск
 		
 		//==== project description======
-		.special-project__block
-			.title-24 Описание проекта
-			p Особая экономическая зона промышленно-производственного типа «Кулибин» создана на территории муниципального образования г.о.г. Дзержинск Нижегородской области.
-			
-			h4 Специализация
-			ul
-				li Производство химических веществ и химических продуктов
-				li Нефтехимия
-				li Обрабатывающая промышленность
-				li Логистика
-				li Производство фармацевтической продукции и медицинского оборудования
-
-			h4 Налоговые льготы для резидентов ОЭЗ
-			ul
-				li #[span Налог на прибыль:] федеральный бюджет – 2%, региональный бюджет – 0% (1-5 лет), 3% (6-10 лет), 12,5% (11-49 лет)
-				li #[span Налог на имущество:] 0% на 10 лет
-				li #[span Земельный налог:] 0% на 5 лет
-				li #[span Транспортный налог:] 0% на 10 лет
+		.special-project__text
+			.special-project__desck
+				.title-24 Описание проекта
+				p Особая экономическая зона промышленно-производственного типа «Кулибин» создана на территории муниципального образования г.о.г. Дзержинск Нижегородской области.
 				
+				h4 Специализация
+				ul
+					li Производство химических веществ и химических продуктов
+					li Нефтехимия
+					li Обрабатывающая промышленность
+					li Логистика
+					li Производство фармацевтической продукции и медицинского оборудования
 
+				h4 Налоговые льготы для резидентов ОЭЗ
+				ul
+					li #[span Налог на прибыль:] федеральный бюджет – 2%, региональный бюджет – 0% (1-5 лет), 3% (6-10 лет), 12,5% (11-49 лет)
+					li #[span Налог на имущество:] 0% на 10 лет
+					li #[span Земельный налог:] 0% на 5 лет
+					li #[span Транспортный налог:] 0% на 10 лет
 
-		
+			
+			//====== Характеристики проекта ======
+			.special-project__characteristics
+				.title-24 Характеристики проекта
+				.double-block
+					//===info card ====
+					.info-card.fl-block
+						svg.svg-target
+							use(href="./img/spriteSvg.svg#svg-target")
+						.info-card__text
+							.txt-upper Фактическое расположение
+							.txt-semi Нижегородская область, г.о.г. Дзержинск
+					//===info card ====
+					.info-card.fl-block
+						svg.svg-fullscreen
+							use(href="./img/spriteSvg.svg#svg-fullscreen")
+						.info-card__text
+							.txt-upper Площадь участка
+							.txt-semi 724,7 га
 
+				h4 Площадки ОЭЗ:
+				ul
+					li Государственная территория – 416,7 га (288 га полезная площадь для резидентов).Фактическое расположение: восточнее завода АО «ДПО «Пластик».В 2024 году площадка будет обеспечена инженерной и транспортной инфраструктурой 
+					li АО «ДПО «Пластик» – 72,3 га, площадка обеспечена инженерной и транспортной инфраструктурой.Фактическое расположение: г.о.г. Дзержинск, Игумновское ш., 15А
+					li АО «ИП «Ока-Полимер» – 190,7 га, площадка обеспечена инженерной и транспортной инфраструктурой.Фактическое расположение: г.о.г. Дзержинск, Восточное ш., 38К
+					li ООО «Синтез Ока» – 45 га, площадка обеспечена инженерной и транспортной инфраструктурой.Фактическое расположение: г.о.г. Дзержинск, 547, территория Восточный промрайон
+			
+			//===== Контакты ======
+			.special-project__contacts
+				.title-24 Контакты
+				.double-block
+					//==== persone card ======
+					.contact-persone.fl-block.info-card
+						.info-card__icon
+							svg.svg-userId
+								use(href="./img/spriteSvg.svg#svg-userId")
+						
+						.info-card__text
+							.txt-upper Ищенко Игорь Владимирович
+							.txt-semi Генеральный директор АО «Корпорация развития Нижегородской области»
+					
+					//==== contacts card ======
+					.contact-list.info-card
+						//=== contact-item==
+						a(href="tel:+78314690360").info-card-item.fl-block
+							.info-card__icon
+								svg.svg-call
+									use(href="./img/spriteSvg.svg#svg-call")
+							
+							.info-card__text
+								.txt-upper Телефон
+								.txt-semi +7 (831) 469-03-60
 
+						//=== contact-item==
+						a(href="mailto:krno@nn-invest.ru").info-card-item.fl-block
+							.info-card__icon
+								svg.svg-mail
+									use(href="./img/spriteSvg.svg#svg-mail")
+							
+							.info-card__text
+								.txt-upper E-mail
+								.txt-semi krno@nn-invest.ru
 
+						//=== contact-item==
+						a(href="www.sezkulibin.ru").info-card-item.fl-block
+							.info-card__icon
+								svg.svg-www
+									use(href="./img/spriteSvg.svg#svg-www")
+							
+							.info-card__text
+								.txt-upper Сайт
+								.txt-semi www.sezkulibin.ru
