--- a/src/scss/sections/_capital.scss
+++ b/src/scss/sections/_capital.scss
@@ -1,5 +1,7 @@
-.capital-table{
-	
+.capital-transfer{
+	p+p{
+		margin-top: 10px!important;
+	}
 }
 .capital-table>*+*{margin-top: 10px;}
 .capital-table__head, .capital-table__row{
