--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -81,6 +81,9 @@
 	-webkit-box-orient: vertical;
 	overflow: hidden;
 }
+.txt-primary{
+	color: $pr;
+}
 .link, .link-medium, .link-small{
 	font-size: 16px;
 	font-weight: 400;
