--- a/src/scss/sections/_supervisory.scss
+++ b/src/scss/sections/_supervisory.scss
@@ -4,6 +4,19 @@
 	img{
 		flex-shrink: 0;
 		object-fit: cover;
+		border-radius: 20px;
+		@media (max-width: 1599px) {
+			width: 48%;
+		}
+		@media (max-width: 991px) {
+		width: 100%;
+		height: 360px;
+		}
+	}
+	@media (max-width: 991px) {
+	  flex-direction: column;
+	  row-gap:10px;
+	  &>*{width: 100%;}
 	}
 }
 .special-project__text{
@@ -16,22 +29,69 @@
 	padding: 30px;
 	color: $sec;
 	column-gap:16px;
+	font-size: 18px;
+	line-height: 1.4;
 	svg{
 		width: 34px;
 		height: 34px;
 		fill: $ac1;
 		flex-shrink: 0;
 	}
+		.info-card__icon{flex-shrink: 0;}
 	.txt-upper{
 		font-family: $medi;
 		letter-spacing: 0.54px;
 		margin-bottom: 4px;
 	}
 	.txt-semi{color: $pr;}
+	@media (max-width: 991px) {
+	font-size: 14px;
+	}
 }
-.special-project__block>*+*{
+.special-project__text>*>*+*{
    margin-top: 30px;
 }
-.special-project__block>*+ul {
+.special-project__text .title-24 + *{
 	margin-top: 20px;
+	@media (max-width: 767px) {
+			margin-top: 10px;
+		}
+}
+.special-project__text>*+*{
+	margin-top: 30px;
+	@media (max-width: 767px) {
+	 margin-top: 20px;
+	}
+}
+.special-project__text *>*+ul {
+	margin-top: 20px;
+	@media (max-width: 767px) {
+	margin-top: 10px;
+	}
+}
+.special-project__contacts{
+	.double-block{column-gap: 10px;}
+}
+.contact-persone{
+	.txt-upper{font-family: $medi; color: $pr;}
+	.txt-semi{color: $sec;}
+}
+.contact-list{
+	.info-card-item .txt-semi{
+		color: $pr;
+		font-family: $semi;
+	}
+	.info-card-item{
+		column-gap:16px;
+		&:hover{
+			.txt-semi{color: $ac1;}
+		}
+	}
+	.info-card-item .txt-upper {
+		color: $sec;
+		font-family: $medi;
+	}
+	.info-card-item +.info-card-item{
+		margin-top: 10px;
+	}
 }
