--- a/src/scss/sections/_capital.scss
+++ b/src/scss/sections/_capital.scss
@@ -1,6 +1,6 @@
 .capital-transfer{
-	p+p{
-		margin-top: 10px!important;
+	.container>p+p{
+		margin-top: 10px;
 	}
 }
 .capital-table>*+*{margin-top: 10px;}
