--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -108,3 +108,20 @@ html(lang="ru")
 									span
 										svg.svg-cross
 											use(href="../img/spriteSvg.svg#svg-cross")
+
+						li
+							.btn-wrapper.fly-center
+								a(href="#!").btn-outline
+									span Загрузить еще новости
+									svg.svg-add
+										use(href="../img/spriteSvg.svg#svg-add")
+								
+								.news-counter 6 / 563
+							pre.
+								.btn-wrapper.fly-center
+									a(href="#!").btn-outline
+										span Загрузить еще новости
+										svg.svg-add
+											use(href="./img/spriteSvg.svg#svg-add")
+									
+									.news-counter 6 / 563
