--- a/src/pug/ui/icons.pug
+++ b/src/pug/ui/icons.pug
@@ -44,3 +44,119 @@ html(lang="ru")
 							pre.
 								svg.chevron-right
 									use(href="./img/spriteSvg.svg#chevron-right")
+						li
+							svg.svg-cross
+								use(href="../img/spriteSvg.svg#svg-cross")
+							pre.
+								svg.svg-cross
+									use(href="./img/spriteSvg.svg#svg-cross")
+						li
+							svg.svg-down
+								use(href="../img/spriteSvg.svg#svg-down")
+							pre.
+								svg.svg-down
+									use(href="./img/spriteSvg.svg#svg-down")
+						li
+							svg.svg-user
+								use(href="../img/spriteSvg.svg#svg-user")
+							pre.
+								svg.svg-user
+									use(href="./img/spriteSvg.svg#svg-user")
+						li
+							svg.svg-search
+								use(href="../img/spriteSvg.svg#svg-search")
+							pre.
+								svg.svg-search
+									use(href="./img/spriteSvg.svg#svg-search")
+						li
+							svg.svg-link
+								use(href="../img/spriteSvg.svg#svg-link")
+							pre.
+								svg.svg-link
+									use(href="./img/spriteSvg.svg#svg-link")
+						li
+							svg.svg-mail
+								use(href="../img/spriteSvg.svg#svg-mail")
+							pre.
+								svg.svg-mail
+									use(href="./img/spriteSvg.svg#"svg-mail)
+						li
+							svg.svg-call
+								use(href="../img/spriteSvg.svg#svg-call")
+							pre.
+								svg.svg-call
+									use(href="./img/spriteSvg.svg#svg-call")
+						li
+							svg.svg-pin
+								use(href="../img/spriteSvg.svg#svg-pin")
+							pre.
+								svg.svg-pin
+									use(href="./img/spriteSvg.svg#svg-pin")
+						li
+							svg.svg-add
+								use(href="../img/spriteSvg.svg#svg-add")
+							pre.
+								svg.svg-add
+									use(href="./img/spriteSvg.svg#svg-add")
+						li
+							svg.svg-folder
+								use(href="../img/spriteSvg.svg#svg-folder")
+							pre.
+								svg.svg-folder
+									use(href="./img/spriteSvg.svg#svg-folder")
+						li
+							svg.svg-target
+								use(href="../img/spriteSvg.svg#svg-target")
+							pre.
+								svg.svg-target
+									use(href="./img/spriteSvg.svg#svg-target")
+						li
+							svg.svg-fullscreen
+								use(href="../img/spriteSvg.svg#svg-fullscreen")
+							pre.
+								svg.svg-fullscreen
+									use(href="./img/spriteSvg.svg#svg-fullscreen")
+						li
+							svg.svg-userId
+								use(href="../img/spriteSvg.svg#svg-userId")
+							pre.
+								svg.svg-userId
+									use(href="./img/spriteSvg.svg#svg-userId")
+						li
+							svg.svg-www
+								use(href="../img/spriteSvg.svg#svg-www")
+							pre.
+								svg.svg-www
+									use(href="./img/spriteSvg.svg#svg-www")
+						li
+							svg.svg-downl
+								use(href="../img/spriteSvg.svg#svg-downl")
+							pre.
+								svg.svg-downl
+									use(href="./img/spriteSvg.svg#svg-downl")
+						li
+							svg.svg-cam
+								use(href="../img/spriteSvg.svg#svg-cam")
+							pre.
+								svg.svg-cam
+									use(href="./img/spriteSvg.svg#svg-cam")
+						li
+							svg.svg-filter
+								use(href="../img/spriteSvg.svg#svg-filter")
+							pre.
+								svg.svg-filter
+									use(href="./img/spriteSvg.svg#svg-filter")
+
+						li
+							svg.svg-check
+								use(href="../img/spriteSvg.svg#svg-check")
+							pre.
+								svg.svg-check
+									use(href="./img/spriteSvg.svg#svg-check")
+
+						li
+							svg.svg-reload
+								use(href="../img/spriteSvg.svg#svg-reload")
+							pre.
+								svg.svg-reload
+									use(href="./img/spriteSvg.svg#svg-reload")
