--- a/src/scss/pages/_content-page.scss
+++ b/src/scss/pages/_content-page.scss
@@ -56,7 +56,9 @@
 	left: 0;
 	right: 0;
 	top: 0;
-	bottom: 0;
+	height: 100%;
+	opacity: 1;
+	transition: .5s;
 	z-index: 2;
 	
 	pointer-events: none;
@@ -77,4 +79,8 @@
 	aspect-ratio: 16/9;
 	border-radius: 20px;
 
+}
+.video-poster.hide {
+	height: 0;
+	opacity: 0;
 }
