--- a/src/scss/sections/_supervisory.scss
+++ b/src/scss/sections/_supervisory.scss
@@ -12,6 +12,12 @@
 		width: 100%;
 		height: 360px;
 		}
+		@media (max-width: 767px){
+			height: 290px;
+		}
+		@media (max-width: 574px) {
+		 height: 204px;
+		}
 	}
 	@media (max-width: 991px) {
 	  flex-direction: column;
@@ -19,9 +25,7 @@
 	  &>*{width: 100%;}
 	}
 }
-.special-project__text{
 
-}
 .info-card{
 	border-radius: 20px;
 	border: 1px solid $sec2;
@@ -36,8 +40,12 @@
 		height: 34px;
 		fill: $ac1;
 		flex-shrink: 0;
+		@media (max-width: 767px) {
+		 width: 22px;
+		 height: 22px;
+		}
 	}
-		.info-card__icon{flex-shrink: 0;}
+	.info-card__icon{flex-shrink: 0; display: flex;align-items:flex-start;}
 	.txt-upper{
 		font-family: $medi;
 		letter-spacing: 0.54px;
@@ -47,6 +55,7 @@
 	@media (max-width: 991px) {
 	font-size: 14px;
 	padding: 10px 20px;
+	border-radius: 10px;
 	}
 }
 .special-project__text>*>*+*{
